// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainContent check render & navigating to contact 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx kVdUYB"
  >
    <div>
      Contact
    </div>
  </div>
</DocumentFragment>
`;

exports[`MainContent check render & navigating to education 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx kVdUYB"
  >
    <div>
      Education
    </div>
  </div>
</DocumentFragment>
`;

exports[`MainContent check render & navigating to home 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx kVdUYB"
  >
    <div>
      AboutMe
    </div>
  </div>
</DocumentFragment>
`;

exports[`MainContent check render & navigating to work experience 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnylx kVdUYB"
  >
    <div />
  </div>
</DocumentFragment>
`;
